Use onclick instead of event listeners for cloning

--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
 
          <!-- POP-UP 4 -->
          <section id="pop-up4">
-            <form id="clone-name">
+            <article id="clone-name">
                 <h2 class="popup-title">Clonar formato</h2>
                 <label for="clone-name-input" class="label">
                     Nombre de nuevo formato
                     <input type="text" id="clone-name-input" class="input" name="form-name" placeholder="Ingresar el nombre del formato clonado" required>
                 </label>
                 <div class="center-btn-popup">
-                    <input type="submit" id="confirm-new-clone" class="btn-end-confirm" value="✔">
+                    <button type="button" id="confirm-new-clone" class="btn-end-confirm">✔</button>
                     <button type="button" id="cancel-new-clone" class="btn-end">✘</button>
                 </div>
-            </form>
+            </article>
          </section>
 
          <section id="pop-up5">
